Attempt to fix overflow issues caused by large words.

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 	flex-direction: column;
 	align-items: stretch;
 	font-size: x-large;
+	word-wrap: break-word;
 }
 
 footer {
@@ -96,13 +97,15 @@ img {
 	border: solid;
 	padding: 1ch;
 	max-width: 82ch;
+	box-sizing: border-box;
 	align-self: center;
 }
 
-@media (max-width: 80ch) {
+@media (max-width: 82ch) {
 	.email, .memo {
 		margin-left: 0;
 		margin-right: 0;
+		max-width: 100%;
 	}
 }
 
